@@ -21,7 +21,7 @@
  * questions.
  */
 
-/**
+/*
  * @test
  * @bug 8142968 8300228
  * @library /test/lib
@@ -31,7 +31,7 @@
  * @build ModuleReaderTest
  *        jdk.test.lib.compiler.CompilerUtils
  *        jdk.test.lib.util.JarUtils
- * @run testng ModuleReaderTest
+ * @run junit ModuleReaderTest
  * @summary Basic tests for java.lang.module.ModuleReader
  */
 
@@ -45,32 +45,30 @@ import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.spi.ToolProvider;
 import java.util.stream.Stream;
 
 import jdk.internal.module.ModulePath;
 import jdk.test.lib.compiler.CompilerUtils;
 import jdk.test.lib.util.JarUtils;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
-import org.testng.annotations.BeforeTest;
-import org.testng.annotations.Test;
-import static org.testng.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ModuleReaderTest {
-    private static final String TEST_SRC = System.getProperty("test.src");
-
-    private static final Path USER_DIR   = Paths.get(System.getProperty("user.dir"));
-    private static final Path SRC_DIR    = Paths.get(TEST_SRC, "src");
-    private static final Path MODS_DIR   = Paths.get("mods");
+    private static final Path MODS_DIR = Path.of("mods");
 
     // the module name of the base module
     private static final String BASE_MODULE = "java.base";
@@ -120,7 +118,8 @@ public class ModuleReaderTest {
     // resources in test module (can't use module-info.class as a test
     // resource as it will be modified by the jmod tool)
     private static final String[] TEST_RESOURCES = {
-        "p/Main.class"
+        "p/Main.class",
+        "p/test.txt"
     };
 
     // (directory) resources that may be in the test module
@@ -150,12 +149,35 @@ public class ModuleReaderTest {
         "p\\Main.class"
     };
 
-    @BeforeTest
-    public void compileTestModule() throws Exception {
-        // javac -d mods/$TESTMODULE src/$TESTMODULE/**
-        boolean compiled = CompilerUtils.compile(SRC_DIR.resolve(TEST_MODULE),
-                                                 MODS_DIR.resolve(TEST_MODULE));
+    @BeforeAll
+    public static void compileTestModules() throws Exception {
+        // create a simple module-info.java
+        Path srcDir = Path.of("src", TEST_MODULE);
+        Files.createDirectories(srcDir);
+        Files.writeString(srcDir.resolve("module-info.java"), "module " + TEST_MODULE + " {}");
+
+        // write and compile test class "p.Main"
+        Path pkgPath = Path.of("p");
+        Path javaSrc = srcDir.resolve(pkgPath).resolve("Main.java");
+        Files.createDirectories(javaSrc.getParent());
+        Files.writeString(javaSrc,
+                """
+                package p;
+                public class Main {
+                    public static void main(String[] args) { }
+                }
+                """);
+
+        // javac -d <outDir> <srcDir>/**
+        Path outDir = MODS_DIR.resolve(TEST_MODULE);
+        boolean compiled = CompilerUtils.compile(srcDir, outDir);
         assertTrue(compiled, "test module did not compile");
+
+        // add two versions of a resource to allow for preview mode testing
+        Files.writeString(outDir.resolve(pkgPath).resolve("test.txt"), "Original");
+        Path previewDir = outDir.resolve("META-INF", "preview").resolve(pkgPath);
+        Files.createDirectories(previewDir);
+        Files.writeString(previewDir.resolve("test.txt"), "Preview Version");
     }
 
     /**
@@ -187,51 +209,29 @@ public class ModuleReaderTest {
                 Optional<URI> ouri = reader.find(name);
                 ouri.ifPresent(uri -> {
                     if (name.endsWith("/"))
-                        assertTrue(uri.toString().endsWith("/"));
+                        assertTrue(uri.toString().endsWith("/"),
+                                "mismatched directory URI for '" + name + "': " + uri);
                 });
             }
 
             // test "not found" in java.base module
             for (String name : NOT_BASE_RESOURCES) {
-                assertFalse(reader.find(name).isPresent());
-                assertFalse(reader.open(name).isPresent());
-                assertFalse(reader.read(name).isPresent());
+                assertFalse(reader.find(name).isPresent(), "Unexpected resource found: " + name);
+                assertFalse(reader.open(name).isPresent(), "Unexpected resource opened: " + name);
+                assertFalse(reader.read(name).isPresent(), "Unexpected resource read: " + name);
             }
 
             // test nulls
-            try {
-                reader.find(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
-            try {
-                reader.open(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
-            try {
-                reader.read(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
-            try {
-                reader.release(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
+            assertThrows(NullPointerException.class, () -> reader.find(null));
+            assertThrows(NullPointerException.class, () -> reader.open(null));
+            assertThrows(NullPointerException.class, () -> reader.read(null));
+            assertThrows(NullPointerException.class, () -> reader.release(null));
         }
 
         // test closed ModuleReader
-        try {
-            reader.open(BASE_RESOURCES[0]);
-            assertTrue(false);
-        } catch (IOException expected) { }
-
-
-        try {
-            reader.read(BASE_RESOURCES[0]);
-            assertTrue(false);
-        } catch (IOException expected) { }
+        assertThrows(IOException.class, () -> reader.open(BASE_RESOURCES[0]));
+        assertThrows(IOException.class, () -> reader.read(BASE_RESOURCES[0]));
+        assertThrows(IOException.class, reader::list);
     }
 
     /**
@@ -243,14 +243,71 @@ public class ModuleReaderTest {
     }
 
     /**
+     * Test the ModuleReader used for the JDK exploded image. A module finder for
+     * a JDK exploded image can be created to locate resources in META-INF/preview
+     * when running with preview feature enabled. This test exercises the ModuleReader
+     * obtained when the module finder is created with preview features enabled and
+     * disabled.
+     */
+    @Test
+    public void testExplodedImage() throws IOException {
+        // preview features disabled
+        ModuleFinder finder = ModulePath.ofExplodedImage(MODS_DIR, null, false);
+        try (ModuleReader reader = finder.find(TEST_MODULE).get().open()) {
+            testReader(reader, "p/test.txt", "Original");
+            testReader(reader, "META-INF/preview/p/test.txt", "Preview Version");
+        }
+
+        // preview features enabled
+        ModuleFinder previewFinder = ModulePath.ofExplodedImage(MODS_DIR, null, true);
+        try (ModuleReader reader = previewFinder.find(TEST_MODULE).get().open()) {
+            testReader(reader, "p/test.txt", "Preview Version");
+            assertFalse(reader.find("META-INF/preview/p/test.txt").isPresent(), "unexpected preview resource");
+        }
+    }
+
+    /**
+     * Test that a ModuleReader locates, opens and reads a resource.
+     */
+    private void testReader(ModuleReader reader, String name, String expectedContent) throws IOException {
+        // check resource is found and that the URI locates the resource
+        Optional<URI> ouri = reader.find(name);
+        assertTrue(ouri.isPresent(), "resource not found: " + name);
+        URI uri = ouri.get();
+        assertTrue(uri.getPath().endsWith(name), "unexpected URI path component: " + uri);
+
+        // read resource bytes with input stream
+        Optional<InputStream> oin = reader.open(name);
+        assertTrue(oin.isPresent(), "resource cannot be opened: " + name);
+        byte[] bytes;
+        try (InputStream in = oin.get()) {
+            bytes = in.readAllBytes();
+        }
+
+        // read resource bytes into byte buffer
+        Optional<ByteBuffer> obb = reader.read(name);
+        assertTrue(obb.isPresent(), "resource cannot be read: " + name);
+        ByteBuffer bb = obb.get();
+        try {
+            assertEquals(ByteBuffer.wrap(bytes), bb, "resource bytes differ: " + name);
+        } finally {
+            reader.release(bb);
+        }
+
+        // test that resource has the expected contents
+        byte[] expectedBytes = expectedContent.getBytes(StandardCharsets.UTF_8);
+        assertArrayEquals(expectedBytes, bytes, "unexpected content");
+    }
+
+    /**
      * Test ModuleReader with module in modular JAR.
      */
     @Test
     public void testModularJar() throws IOException {
-        Path dir = Files.createTempDirectory(USER_DIR, "mlib");
+        Path dir = Files.createTempDirectory(Path.of("."), "mlib");
 
         // jar cf mlib/${TESTMODULE}.jar -C mods .
-        JarUtils.createJarFile(dir.resolve("m.jar"),
+        JarUtils.createJarFile(dir.resolve(TEST_MODULE + ".jar"),
                                MODS_DIR.resolve(TEST_MODULE));
 
         test(dir);
@@ -261,17 +318,17 @@ public class ModuleReaderTest {
      */
     @Test
     public void testJMod() throws IOException {
-        Path dir = Files.createTempDirectory(USER_DIR, "mlib");
+        Path dir = Files.createTempDirectory(Path.of("."), "mlib");
 
         // jmod create --class-path mods/${TESTMODULE}  mlib/${TESTMODULE}.jmod
         String cp = MODS_DIR.resolve(TEST_MODULE).toString();
-        String jmod = dir.resolve("m.jmod").toString();
+        String jmod = dir.resolve(TEST_MODULE + ".jmod").toString();
         String[] args = { "create", "--class-path", cp, jmod };
         ToolProvider jmodTool = ToolProvider.findFirst("jmod")
-            .orElseThrow(() ->
-                new RuntimeException("jmod tool not found")
-            );
-        assertEquals(jmodTool.run(System.out, System.out, args), 0);
+                .orElseThrow(() ->
+                        new RuntimeException("jmod tool not found")
+                );
+        assertEquals(0, jmodTool.run(System.out, System.out, args), "jmod tool failed");
 
         test(dir);
     }
@@ -307,57 +364,30 @@ public class ModuleReaderTest {
                 Optional<URI> ouri = reader.find(name);
                 ouri.ifPresent(uri -> {
                     if (name.endsWith("/"))
-                        assertTrue(uri.toString().endsWith("/"));
+                        assertTrue(uri.toString().endsWith("/"),
+                                "mismatched directory URI for '" + name + "': " + uri);
                 });
             }
 
             // test "not found" in test module
             for (String name : NOT_TEST_RESOURCES) {
                 System.out.println("resource: " + name);
-                assertFalse(reader.find(name).isPresent());
-                assertFalse(reader.open(name).isPresent());
-                assertFalse(reader.read(name).isPresent());
+                assertFalse(reader.find(name).isPresent(), "Unexpected resource found: " + name);
+                assertFalse(reader.open(name).isPresent(), "Unexpected resource open: " + name);
+                assertFalse(reader.read(name).isPresent(), "Unexpected resource read: " + name);
             }
 
             // test nulls
-            try {
-                reader.find(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
-            try {
-                reader.open(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
-            try {
-                reader.read(null);
-                assertTrue(false);
-            } catch (NullPointerException expected) { }
-
-            try {
-                reader.release(null);
-                throw new RuntimeException();
-            } catch (NullPointerException expected) { }
-
+            assertThrows(NullPointerException.class, () -> reader.find(null));
+            assertThrows(NullPointerException.class, () -> reader.open(null));
+            assertThrows(NullPointerException.class, () -> reader.read(null));
+            assertThrows(NullPointerException.class, () -> reader.release(null));
         }
 
         // test closed ModuleReader
-        try {
-            reader.open(TEST_RESOURCES[0]);
-            assertTrue(false);
-        } catch (IOException expected) { }
-
-
-        try {
-            reader.read(TEST_RESOURCES[0]);
-            assertTrue(false);
-        } catch (IOException expected) { }
-
-        try {
-            reader.list();
-            assertTrue(false);
-        } catch (IOException expected) { }
+        assertThrows(IOException.class, () -> reader.open(BASE_RESOURCES[0]));
+        assertThrows(IOException.class, () -> reader.read(BASE_RESOURCES[0]));
+        assertThrows(IOException.class, reader::list);
     }
 
     /**
@@ -367,7 +397,7 @@ public class ModuleReaderTest {
         throws IOException
     {
         Optional<URI> ouri = reader.find(name);
-        assertTrue(ouri.isPresent());
+        assertTrue(ouri.isPresent(), "missing URI for: " + name);
 
         URL url = ouri.get().toURL();
         if (!url.getProtocol().equalsIgnoreCase("jmod")) {
@@ -375,7 +405,7 @@ public class ModuleReaderTest {
             uc.setUseCaches(false);
             try (InputStream in = uc.getInputStream()) {
                 byte[] bytes = in.readAllBytes();
-                assertTrue(Arrays.equals(bytes, expectedBytes));
+                assertArrayEquals(expectedBytes, bytes, "resource bytes differ for: " + name);
             }
         }
     }
@@ -387,12 +417,10 @@ public class ModuleReaderTest {
         throws IOException
     {
         Optional<InputStream> oin = reader.open(name);
-        assertTrue(oin.isPresent());
-
-        InputStream in = oin.get();
-        try (in) {
+        assertTrue(oin.isPresent(), "missing input stream for: " + name);
+        try (InputStream in = oin.get()) {
             byte[] bytes = in.readAllBytes();
-            assertTrue(Arrays.equals(bytes, expectedBytes));
+            assertArrayEquals(expectedBytes, bytes, "resource bytes differ for: " + name);
         }
     }
 
@@ -408,10 +436,10 @@ public class ModuleReaderTest {
         ByteBuffer bb = obb.get();
         try {
             int rem = bb.remaining();
-            assertTrue(rem == expectedBytes.length);
+            assertEquals(expectedBytes.length, rem, "resource lengths differ: " + name);
             byte[] bytes = new byte[rem];
             bb.get(bytes);
-            assertTrue(Arrays.equals(bytes, expectedBytes));
+            assertArrayEquals(expectedBytes, bytes, "resource bytes differ: " + name);
         } finally {
             reader.release(bb);
         }
@@ -426,14 +454,14 @@ public class ModuleReaderTest {
             list = stream.toList();
         }
         Set<String> names = new HashSet<>(list);
-        assertTrue(names.size() == list.size()); // no duplicates
+        assertEquals(names.size(), list.size(), "resource list contains duplicates: " + list);
 
-        assertTrue(names.contains("module-info.class"));
-        assertTrue(names.contains(name));
+        assertTrue(names.contains("module-info.class"), "resource list did not contain 'module-info.class': " + list);
+        assertTrue(names.contains(name), "resource list did not contain '" + name + "'" + list);
 
         // all resources should be locatable via find
         for (String e : names) {
-            assertTrue(reader.find(e).isPresent());
+            assertTrue(reader.find(e).isPresent(), "resource not found: " + name);
         }
     }
 
